# GrokSearch

./: README.md  pyproject.toml
docs/: README_EN.md
src/grok_search/: config.py  logger.py  server.py  utils.py
src/grok_search/providers/: grok.py
